compiler/test_files/typing/bad/testfile-redef-2.psc

i32 main() {}
i32 main() {}
